# PhysicsEngine

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/physics/: Configuration.h  Physics.h
include/physics/collections/: DynamicArray.h  HashMap.h  HashSet.h  List.h  Map.h  Pair.h  Queue.h  Set.h  Stack.h
include/physics/collectors/: DoublyLinkedList.h  DynamicArray.h  Pair.h
include/physics/collision/: AABB.h  BoxShape.h  BroadPhase.h  CircleShape.h  Collider.h  CollisionDetection.h  Contact.h  ConvexHull.h  DynamicTree.h  EdgeShape.h  NarrowPhase.h  OverlapPairs.h  PolygonShape.h  Shape.h
include/physics/collision/algorithms/: AlgorithmDispatch.h  CircleVCircleAlgorithm.h  CircleVPolygonAlgorithm.h  CollisionAlgorithm.h  PolygonVPolygonAlgorithm.h
include/physics/common/: BodyComponents.h  ColliderComponents.h  Components.h  Entity.h  EntityHandler.h  Factory.h  Logger.h  TimeStep.h  TransformComponents.h  World.h
include/physics/containers/: DynamicArray.h
include/physics/dynamics/: Body.h  ContactSolver.h  Dynamics.h  Islands.h  Material.h
include/physics/mathematics/: ConvexHull.h  Math.h  MathCommon.h  Matrix22.h  Matrix33.h  Rotation.h  Transform.h  Vector2.h  Vector3.h
include/physics/memory/: Buddy.h  FreeList.h  Linear.h  MemoryFactory.h  MemoryHandler.h  MemoryStrategy.h  ObjectPool.h  Vanilla.h
log/: log.txt
src/collision/: AABB.cpp  BoxShape.cpp  BroadPhase.cpp  CircleShape.cpp  Collider.cpp  CollisionDetection.cpp  ConvexHull.cpp  DynamicTree.cpp  EdgeShape.cpp  NarrowPhase.cpp  OverlapPairs.cpp  PolygonShape.cpp  Shape.cpp
src/collision/algorithms/: AlgorithmDispatch.cpp  CircleVCircleAlgorithm.cpp  CircleVPolygonAlgorithm.cpp  PolygonVPolygonAlgorithm.cpp
src/common/: BodyComponents.cpp  ColliderComponents.cpp  Components.cpp  Factory.cpp  TransformComponents.cpp  World.cpp
src/dynamics/: Body.cpp  ContactSolver.cpp  Dynamics.cpp  Islands.cpp
src/mathematics/: Matrix22.cpp  Matrix33.cpp  Rotation.cpp  Vector2.cpp  Vector3.cpp
src/memory/: FreeList.cpp  Linear.cpp  ObjectPool.cpp
test/: AABB.cpp  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Body.cpp  BoxShape.cpp  CMakeLists.txt  CTestTestfile.cmake  CircleShape.cpp  Collider.cpp  Collision.cpp  ConvexHull.cpp  DoublyLinkedList.cpp  DynamicArray.cpp  DynamicTree.cpp  HashMap.cpp  HashSet.cpp  INSTALL.vcxproj  INSTALL.vcxproj.filters  List.cpp  Map.cpp  Matrix22.cpp  Matrix33.cpp  Pair.cpp  PolygonShape.cpp  Queue.cpp  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Rotation.cpp  Set.cpp  Stack.cpp  Tests.sln  Transform.cpp  UnitTests.h  Vector2.cpp  Vector3.cpp  World.cpp  cmake_install.cmake  main.cpp  tests.vcxproj  tests.vcxproj.filters  (+1 more)
